fix: adjust table layout for equipment and electricity configuration for better alignment

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -191,7 +191,6 @@
                       border-bottom: none;
                     "
                   />
-
                   <table style="width: 100%">
                     <tr>
                       <td
@@ -199,6 +198,7 @@
                           vertical-align: top;
                           padding-right: 2em;
                           border: none;
+                          width: 50%;
                         "
                       >
                         <span id="equipment-title">基礎設備：</span>
@@ -219,7 +219,7 @@
                           </li>
                         </ul>
                       </td>
-                      <td style="vertical-align: top; border: none">
+                      <td style="vertical-align: top; border: none; width: 50%">
                         <span id="electricity-title">電源配置：</span>
                         <ul
                           style="
