--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -992,6 +992,7 @@
                             <td
                               style="
                                 border-left: none;
+                                border-right: #fff 2px solid;
                                 background: #000;
                                 color: #fff;
                                 font-size: 0.75rem;
@@ -1052,7 +1053,7 @@
                           width: 75%;
                           padding: 0;
                           border-top: 0.5px solid pink;
-                          border-left: none;
+                          border-left: 1px solid black;
                           border-bottom: none;
                           border-right: 1px solid black;
                           vertical-align: top;
