fix: implement dynamic language switching for exhibitor declaration section based on booth type

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -991,8 +991,7 @@
                           <tr>
                             <td
                               style="
-                                border-left: none;
-                                border-right: #fff 2px solid;
+                                border-right: #fff 1px solid;
                                 background: #000;
                                 color: #fff;
                                 font-size: 0.75rem;
@@ -1003,16 +1002,20 @@
                             </td>
                           </tr>
                           <tr>
-                            <td style="padding: 1em 0 1em 1em">
+                            <td style="padding: 1em 1em 1em 1em; border: none">
                               <a
                                 href="downloads/TPABF_Exhibitor_Declaration.pdf"
                                 target="_blank"
                                 style="font-weight: bold"
+                                id="declaration-download-link"
                               >
-                                下載參展同意書 Download Declaration
+                                下載參展同意書 <br />Download Declaration
                               </a>
                               <br />
-                              <span style="font-size: 0.95em; color: #888">
+                              <span
+                                style="font-size: 0.95em; color: #888"
+                                id="declaration-desc"
+                              >
                                 請下載並簽署參展同意書，完成後請上傳。<br />
                                 Please download and sign the declaration, then
                                 upload the signed file below.
