fix: update electricity row display logic for booth type handling

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -354,7 +354,10 @@
                   <span id="yearlyanswer"></span>
                 </td>
               </tr>
-              <tr id="electricity-row" style="background-color: #fff5ee">
+              <tr
+                id="electricity-row"
+                style="background-color: #fff5ee; display: none"
+              >
                 <td>
                   <span class="label">電力需求 Electricity Requirement</span
                   ><br />
