--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1005,7 +1005,12 @@
                             </td>
                           </tr>
                           <tr>
-                            <td style="padding: 1em 1em 1em 1em; border: none">
+                            <td
+                              style="
+                                padding: 0.5em 0.5em 0.5em 0.5em;
+                                border: none;
+                              "
+                            >
                               <a
                                 href="downloads/TPABF_Exhibitor_Declaration.pdf"
                                 target="_blank"
