fix: update contact information and improve clarity in the dashboard

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -989,7 +989,7 @@
                         vertical-align: top;
                       "
                     >
-                      <td colspan="3" style="padding: 0; border: none">
+                      <td style="padding: 0; border: none; width: 20%">
                         <table style="width: 100%">
                           <tr>
                             <td
@@ -1014,19 +1014,18 @@
                               <a
                                 href="downloads/TPABF_Exhibitor_Declaration.pdf"
                                 target="_blank"
-                                style="font-weight: bold"
                                 id="declaration-download-link"
                               >
                                 下載參展同意書 <br />Download Declaration
                               </a>
-                              <br />
+                              <br /><br />
                               <span
-                                style="font-size: 0.95em; color: #888"
+                                style="font-size: 0.8em; color: #888"
                                 id="declaration-desc"
                               >
-                                請下載並簽署參展同意書，完成後請上傳。<br />
-                                Please download and sign the declaration, then
-                                upload the signed file below.
+                                請下載並簽署參展同意書，完成後請上傳。 Please
+                                download and sign the declaration, then upload
+                                the signed file below.
                               </span>
                               <form
                                 id="declaration-upload-form"
@@ -1061,7 +1060,7 @@
                       <td
                         colspan="2"
                         style="
-                          width: 75%;
+                          width: 80%;
                           padding: 0;
                           border-top: 0.5px solid pink;
                           border-left: 1px solid black;
@@ -1791,7 +1790,7 @@
             </form>
           </div>
         </td>
-        <!-- 帳號 -->
+        <!-- 帳號完 -->
 
         <td class="admin" id="contact-method" style="display: none">
           <div class="scroll-inner">
@@ -1808,28 +1807,45 @@
                       font-family: 'Inclusive Sans', sans-serif;
                     "
                   >
-                    <span
-                      >EMAIL -
-                      <a href="mailto:shakyfloor@double-grass.com"
-                        >hooroo@double-grass.com</a
-                      ></span
+                    如有任何問題，請依主題聯繫對應窗口，我們將盡快回覆您：<br />
+                    If you have any questions, please contact the appropriate
+                    email below:<br /><br />
+                    📌 簽證相關 Visa Support<br />
+                    ✉️
+                    <a href="mailto:anm@double-grass.com"
+                      >anm@double-grass.com</a
+                    ><br /><br />
+                    📌 草率簿資料上傳 & 行銷素材 Catalog Submission & Marketing
+                    Materials<br />
+                    ✉️
+                    <a href="mailto:shao@double-grass.com"
+                      >shao@double-grass.com</a
+                    ><br /><br />
+                    📌 攤位配置與參展相關 Booth & Exhibitor Inquiries<br />
+                    ✉️
+                    <a href="mailto:xavia@double-grass.com"
+                      >xavia@double-grass.com</a
+                    ><br /><br />
+                    📌 寄件服務 Shipping Service<br />
+                    ✉️
+                    <a href="mailto:shakyfloor@double-grass.com"
+                      >shakyfloor@double-grass.com</a
+                    ><br /><br />
+                    📌 現場活動相關（講座／工作坊／表演）Program Proposals<br />
+                    ✉️
+                    <a href="mailto:shakyfloor@double-grass.com"
+                      >shakyfloor@double-grass.com</a
+                    ><br /><br />
+                    📌 帳務與收據 Invoice & Payment Questions<br />
+                    ✉️
+                    <a href="mailto:anm@double-grass.com"
+                      >anm@double-grass.com</a
                     ><br />
-                    <span
-                      >INSTAGRAM -
-                      <a
-                        target="_blank"
-                        href="https://www.instagram.com/taipeiartbookfair/"
-                        >@taipeiartbookfair</a
-                      ></span
-                    ><br />
-                    <span
-                      >FACEBOOK -
-                      <a
-                        target="_blank"
-                        href="https://www.facebook.com/taipeiartbookfair/"
-                        >@taipeiartbookfair</a
-                      ></span
-                    >
+                    <br />
+                    📩 提醒 Reminder
+                    來信請註明您的報名編號，以利我們快速為您查詢與回覆。 Please
+                    include your application number in all emails to help us
+                    respond efficiently.
                   </div>
                   <!-- 我484故意寫個圈圈叉叉在這裡讓你忘記你為什麼要聯絡窗口? 嗯對，是。
                    Do i purposely write an XOXO here to distract you from your original purpose? yish:P -->
