feat: enhance media section with download and upload functionality for marketing materials

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1199,46 +1199,137 @@
                   <small>hooroo@double-grass.com</small><br />
                 </td>
               </tr>
-              <tr id="media-section" style="display: none">
-                <!-- 素材下載 Download -->
-                <td
-                  colspan="2"
-                  style="border-top: none; width: 80%; border-right: none"
-                >
-                  <span class="label">素材下載 Download Materials</span>
-
-                  <div id="material-download">
-                    若您需要使用草率季的官方素材，請下載以下壓縮檔案。此外，該素材包包含草率季媒體官版編輯AI檔，請照公版編輯後回傳。<br />
-                    <a id="zip-link" href="downloads/material-tw.zip" download
-                      >下載 Download
-                    </a>
-                  </div>
-                </td>
-                <!-- 行銷素材上傳 Upload -->
-                <td
-                  colspan="1"
-                  style="
-                    border-top: none;
-                    width: 20%;
-                    border-left: 1px dashed black;
-                  "
-                >
-                  <form
-                    id="marketing-upload-form"
-                    enctype="multipart/form-data"
+              <section id="media-section" style="display: none">
+                <tr>
+                  <!-- 素材下載 Download -->
+                  <td
+                    colspan="2"
+                    style="border-top: none; width: 80%; border-right: none"
                   >
-                    <label for="marketing-file">請在此上傳宣傳資料</label>
-                    <input
-                      type="file"
-                      id="marketing-file"
-                      name="marketing-file"
-                      accept=".pdf,.jpg,.jpeg,.png"
-                    />
-                    <button type="submit">上傳 Upload</button>
-                  </form>
-                </td>
-              </tr>
-
+                    <span class="label"
+                      >行銷素材下載＆上傳<br />​​Download & Upload Marketing
+                      Materials</span
+                    >
+                    <div id="material-download" style="margin-bottom: 1em">
+                      <strong>下載視覺素材包：</strong><br />
+                      若您需要使用草率季官方行銷素材，點此下載檔案。<br />
+                      <strong>Media Kit Download:</strong><br />
+                      If you wish to use official TPABF promotional materials,
+                      please download the following ZIP file.<br />
+                      <a id="zip-link" href="downloads/material-tw.zip" download
+                        >下載 Download</a
+                      >
+                    </div>
+                    <div id="material-upload">
+                      <strong>上傳：</strong><br />
+                      請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
+                      📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
+                      ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
+                      <strong>Upload:</strong><br />
+                      Please use the official AI template from the media kit to
+                      create and upload one image for social media promotion.<br />
+                      📌 Specs: JPG, RGB, 150 ppi, 1 image per exhibitor<br />
+                      ⚠️ Submissions after the deadline may not be included in
+                      our social media posts.
+                    </div>
+                  </td>
+                  <!-- 行銷素材上傳 Upload -->
+                  <td
+                    colspan="1"
+                    style="
+                      border-top: none;
+                      width: 20%;
+                      border-left: 1px dashed black;
+                    "
+                  >
+                    <form
+                      id="marketing-upload-form"
+                      enctype="multipart/form-data"
+                    >
+                      <label for="marketing-file">請在此上傳宣傳資料</label>
+                      <input
+                        type="file"
+                        id="marketing-file"
+                        name="marketing-file"
+                        accept=".pdf,.jpg,.jpeg,.png"
+                      />
+                      <button type="submit">上傳 Upload</button>
+                    </form>
+                  </td>
+                </tr>
+                <tr id="media-live-event-section">
+                  <td
+                    colspan="1"
+                    style="
+                      border-top: none;
+                      width: 30vw;
+                      border-left: 1px dashed black;
+                      vertical-align: top;
+                      padding-left: 1em;
+                    "
+                  >
+                    <span class="label"
+                      >現場活動徵集<br />Program Open Call</span
+                    >
+                    <div style="margin-top: 0.5em; font-size: 1rem">
+                      想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。<br />
+                      Want to engage with visitors more directly? Propose
+                      on-site programs such as short talks, performances,
+                      workshops, or DJ sets!
+                    </div>
+                  </td>
+                </tr>
+                <tr id="media-section-catalog-section">
+                  <td
+                    colspan="3"
+                    style="
+                      border-top: none;
+                      border-right: none;
+                      padding-top: 1.5em;
+                    "
+                  >
+                    <span class="label"
+                      >草率簿露出上傳<br />TPABF Catalog Submission</span
+                    >
+                    <div style="margin-top: 0.5em; font-size: 1rem">
+                      單位獲取參展資格即代表可於當年《草率簿 TPABF
+                      Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
+                      📌 規格：<br />
+                      檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
+                      工作區域 Workspace：140×220mm<br />
+                      四邊出血 Bleed：5mm<br />
+                      色彩 Color Mode: 黑白 B&W<br />
+                      📥 公版下載：<br />
+                      <a
+                        href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
+                        target="_blank"
+                      >
+                        https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link
+                      </a>
+                      <br /><br />
+                      Once selected to exhibit, your project will be featured on
+                      one page in that year’s TPABF Catalog. Please use the
+                      template from the Marketing Kit and complete both the
+                      upload and any updates to your basic exhibitor info
+                      (left-side fields) by the deadline. Late submissions will
+                      not be included.<br /><br />
+                      📌 Specs:<br />
+                      File Format: PDF (Please ensure images are embedded and
+                      text is outlined)<br />
+                      Workspace: 140 × 220 mm<br />
+                      Bleed: 5 mm on all sides<br />
+                      Color Mode: Black & White (B&W)<br />
+                      📥 Template Download:<br />
+                      <a
+                        href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
+                        target="_blank"
+                      >
+                        https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link
+                      </a>
+                    </div>
+                  </td>
+                </tr>
+              </section>
               <!-- 簽證資料上傳 Visa Upload -->
               <tr style="display: none" id="media-section-row3">
                 <td
@@ -1287,13 +1378,55 @@
                   <div id="foreigner-form">
                     <span class="label"
                       >海外寄件服務 Overseas Shipping Service</span
-                    ><br />The Overseas Shipping Service is a convenient option
-                    provided by Taipei Art Book Fair for international
-                    exhibitors, allowing you to easily send your works to
-                    Taiwan. Please download and complete the following form, and
-                    upload it to our system before the deadline.<br /><a
-                      href="www.form.google.com"
-                      >表單連結 Form Link</a
+                    ><br />
+                    為確保您的物品順利送達現場，請務必完成下方表單填寫，並確保包裹於
+                    <b>2025年11月7日（週五）前</b> 抵達指定收件地址。<br />
+                    如未填寫表單或逾期寄達，我們將無法提供轉送協助，敬請留意。<br />
+                    <br />
+                    寄來表單：<a
+                      href="https://forms.gle/hVu54wUfqqUMRxfG8"
+                      target="_blank"
+                      >https://forms.gle/hVu54wUfqqUMRxfG8</a
+                    >
+                    <br /><br />
+                    完成寄回服務的表單填寫，請於活動最後一天
+                    <b>2025/11/23（日）17:00</b>
+                    起將需寄回之包裹集合到報到台，請在此之前確認所有提交資訊正確無誤。請您備好現金，現場點交後支付。<br />
+                    <br />
+                    寄回表單：<a
+                      href="https://ezpost.post.gov.tw/ITMATT/#"
+                      target="_blank"
+                      >https://ezpost.post.gov.tw/ITMATT/#</a
+                    >
+                    <br /><br />
+                    <hr />
+                    To ensure your materials arrive safely, please make sure to
+                    complete the shipping form and have your package delivered
+                    before <b>November 7, 2025 (Fri.)</b> to the designated
+                    address.<br />
+                    Late or unregistered shipments will not be eligible for
+                    transfer service.<br />
+                    <br />
+                    Sending in advance:
+                    <a
+                      href="https://forms.gle/hVu54wUfqqUMRxfG8"
+                      target="_blank"
+                      >https://forms.gle/hVu54wUfqqUMRxfG8</a
+                    >
+                    <br /><br />
+                    If you may need us to send back, please reply to the Return
+                    Service survey below and you can re-edit the package
+                    information later. We will start collecting packages at the
+                    CHECK-IN desk at <b>5:00 PM on 11/23 (Sun.)</b>, so make
+                    sure all the information is correctly filled in by then.<br />
+                    Please prepare cash for on-site payment after checking the
+                    package.<br />
+                    <br />
+                    Sending back:
+                    <a
+                      href="https://ezpost.post.gov.tw/ITMATT/#"
+                      target="_blank"
+                      >https://ezpost.post.gov.tw/ITMATT/#</a
                     >
                   </div>
                 </td>
@@ -1325,9 +1458,10 @@
               <tr style="display: none" id="media-section-row5">
                 <td style="border-top: none; width: 55vw">
                   <span class="label">攤主手冊 Exhibitor Manual</span><br />
-                  <a href="https://your-shopline-link.com" target="_blank"
+                  展前將提供完整《攤主手冊》供您下載，內含報到流程、進撤場時間、攤位樣式參考、現場規範與《罰金手冊》等所有參展須知，請務必詳閱並依說明準備。
+                  <!-- <a href="https://your-shopline-link.com" target="_blank"
                     >下載 Download</a
-                  >
+                  > -->
                 </td>
                 <td style="border-top: none; width: 55vw">
                   <span class="label">展場地圖 Venue Map</span><br />
