feat: add upload functionality for catalog files and include sign-up form link in media section

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1277,11 +1277,19 @@
                       on-site programs such as short talks, performances,
                       workshops, or DJ sets!
                     </div>
+                    <div style="margin-top: 0.5em; font-size: 0.5rem">
+                      <a
+                        href="https://forms.gle/ckXiewW68i1VwKYt6"
+                        target="_blank"
+                      >
+                        報名表單 Sign Up Form
+                      </a>
+                    </div>
                   </td>
                 </tr>
                 <tr id="media-section-catalog-section">
                   <td
-                    colspan="3"
+                    colspan="1"
                     style="
                       border-top: none;
                       border-right: none;
@@ -1299,13 +1307,7 @@
                       工作區域 Workspace：140×220mm<br />
                       四邊出血 Bleed：5mm<br />
                       色彩 Color Mode: 黑白 B&W<br />
-                      📥 公版下載：<br />
-                      <a
-                        href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
-                        target="_blank"
-                      >
-                        https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link
-                      </a>
+
                       <br /><br />
                       Once selected to exhibit, your project will be featured on
                       one page in that year’s TPABF Catalog. Please use the
@@ -1318,14 +1320,37 @@
                       text is outlined)<br />
                       Workspace: 140 × 220 mm<br />
                       Bleed: 5 mm on all sides<br />
-                      Color Mode: Black & White (B&W)<br />
-                      📥 Template Download:<br />
+                      Color Mode: Black & White (B&W)<br /><br />
+                      📥 公版下載 Template Download:<br />
                       <a
                         href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
                         target="_blank"
                       >
-                        https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link
+                        Download Link
                       </a>
+                    </div>
+                  </td>
+                  <td
+                    colspan="1"
+                    style="
+                      border-top: none;
+                      width: 20%;
+                      border-left: 1px dashed black;
+                    "
+                  >
+                    <div>
+                      <form
+                        id="catalog-upload-form"
+                        enctype="multipart/form-data"
+                      >
+                        <input
+                          type="file"
+                          id="catalog-file"
+                          name="catalog-file"
+                          accept=".pdf"
+                        />
+                        <button type="submit">上傳 Upload</button>
+                      </form>
                     </div>
                   </td>
                 </tr>
