--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1199,162 +1199,159 @@
                   <small>hooroo@double-grass.com</small><br />
                 </td>
               </tr>
-              <section id="media-section" style="display: none">
-                <tr>
-                  <!-- 素材下載 Download -->
-                  <td
-                    colspan="2"
-                    style="border-top: none; width: 80%; border-right: none"
+              <tr id="media-section" style="display: none">
+                <!-- 素材下載 Download -->
+                <td
+                  colspan="2"
+                  style="border-top: none; width: 80%; border-right: none"
+                >
+                  <span class="label"
+                    >行銷素材下載＆上傳<br />​​Download & Upload Marketing
+                    Materials</span
                   >
-                    <span class="label"
-                      >行銷素材下載＆上傳<br />​​Download & Upload Marketing
-                      Materials</span
+                  <div id="material-download" style="margin-bottom: 1em">
+                    <strong>下載視覺素材包：</strong><br />
+                    若您需要使用草率季官方行銷素材，點此下載檔案。<br />
+                    <strong>Media Kit Download:</strong><br />
+                    If you wish to use official TPABF promotional materials,
+                    please download the following ZIP file.<br />
+                    <a id="zip-link" href="downloads/material-tw.zip" download
+                      >下載 Download</a
                     >
-                    <div id="material-download" style="margin-bottom: 1em">
-                      <strong>下載視覺素材包：</strong><br />
-                      若您需要使用草率季官方行銷素材，點此下載檔案。<br />
-                      <strong>Media Kit Download:</strong><br />
-                      If you wish to use official TPABF promotional materials,
-                      please download the following ZIP file.<br />
-                      <a id="zip-link" href="downloads/material-tw.zip" download
-                        >下載 Download</a
-                      >
-                    </div>
-                    <div id="material-upload">
-                      <strong>上傳：</strong><br />
-                      請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
-                      📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
-                      ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
-                      <strong>Upload:</strong><br />
-                      Please use the official AI template from the media kit to
-                      create and upload one image for social media promotion.<br />
-                      📌 Specs: JPG, RGB, 150 ppi, 1 image per exhibitor<br />
-                      ⚠️ Submissions after the deadline may not be included in
-                      our social media posts.
-                    </div>
-                  </td>
-                  <!-- 行銷素材上傳 Upload -->
-                  <td
-                    colspan="1"
-                    style="
-                      border-top: none;
-                      width: 20%;
-                      border-left: 1px dashed black;
-                    "
+                  </div>
+                  <div id="material-upload">
+                    <strong>上傳：</strong><br />
+                    請使用素材包內的官方模板（AI檔）製作，並上傳一張符合格式的圖片，我們將安排社群露出。(書攤需有三本書籍圖片上傳）<br />
+                    📌 格式：JPG、RGB、150 ppi、每單位限 1 張，zip包上傳<br />
+                    ⚠️ 未於期限內上傳，將可能無法安排社群曝光。<br />
+                    <strong>Upload:</strong><br />
+                    Please use the official AI template from the media kit to
+                    create and upload one image for social media promotion.<br />
+                    📌 Specs: JPG, RGB, 150 ppi, 1 image per exhibitor<br />
+                    ⚠️ Submissions after the deadline may not be included in our
+                    social media posts.
+                  </div>
+                </td>
+                <!-- 行銷素材上傳 Upload -->
+                <td
+                  colspan="1"
+                  style="
+                    border-top: none;
+                    width: 20%;
+                    border-left: 1px dashed black;
+                  "
+                >
+                  <form
+                    id="marketing-upload-form"
+                    enctype="multipart/form-data"
                   >
+                    <label for="marketing-file">請在此上傳宣傳資料</label>
+                    <input
+                      type="file"
+                      id="marketing-file"
+                      name="marketing-file"
+                      accept=".pdf,.jpg,.jpeg,.png"
+                    />
+                    <button type="submit">上傳 Upload</button>
+                  </form>
+                </td>
+              </tr>
+              <tr id="media-live-event-section" style="display: none">
+                <td
+                  colspan="1"
+                  style="
+                    border-top: none;
+                    width: 30vw;
+                    border-left: 1px dashed black;
+                    vertical-align: top;
+                    padding-left: 1em;
+                  "
+                >
+                  <span class="label">現場活動徵集<br />Program Open Call</span>
+                  <div style="margin-top: 0.5em; font-size: 1rem">
+                    想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。<br />
+                    Want to engage with visitors more directly? Propose on-site
+                    programs such as short talks, performances, workshops, or DJ
+                    sets!
+                  </div>
+                  <div style="margin-top: 0.5em; font-size: 0.5rem">
+                    <a
+                      href="https://forms.gle/ckXiewW68i1VwKYt6"
+                      target="_blank"
+                    >
+                      報名表單 Sign Up Form
+                    </a>
+                  </div>
+                </td>
+              </tr>
+              <tr id="media-section-catalog-section" style="display: none">
+                <td
+                  colspan="1"
+                  style="
+                    border-top: none;
+                    border-right: none;
+                    padding-top: 1.5em;
+                  "
+                >
+                  <span class="label"
+                    >草率簿露出上傳<br />TPABF Catalog Submission</span
+                  >
+                  <div style="margin-top: 0.5em; font-size: 1rem">
+                    單位獲取參展資格即代表可於當年《草率簿 TPABF
+                    Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
+                    📌 規格：<br />
+                    檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
+                    工作區域 Workspace：140×220mm<br />
+                    四邊出血 Bleed：5mm<br />
+                    色彩 Color Mode: 黑白 B&W<br />
+
+                    <br /><br />
+                    Once selected to exhibit, your project will be featured on
+                    one page in that year’s TPABF Catalog. Please use the
+                    template from the Marketing Kit and complete both the upload
+                    and any updates to your basic exhibitor info (left-side
+                    fields) by the deadline. Late submissions will not be
+                    included.<br /><br />
+                    📌 Specs:<br />
+                    File Format: PDF (Please ensure images are embedded and text
+                    is outlined)<br />
+                    Workspace: 140 × 220 mm<br />
+                    Bleed: 5 mm on all sides<br />
+                    Color Mode: Black & White (B&W)<br /><br />
+                    📥 公版下載 Template Download:<br />
+                    <a
+                      href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
+                      target="_blank"
+                    >
+                      Download Link
+                    </a>
+                  </div>
+                </td>
+                <td
+                  colspan="1"
+                  style="
+                    border-top: none;
+                    width: 20%;
+                    border-left: 1px dashed black;
+                  "
+                >
+                  <div>
                     <form
-                      id="marketing-upload-form"
+                      id="catalog-upload-form"
                       enctype="multipart/form-data"
                     >
-                      <label for="marketing-file">請在此上傳宣傳資料</label>
                       <input
                         type="file"
-                        id="marketing-file"
-                        name="marketing-file"
-                        accept=".pdf,.jpg,.jpeg,.png"
+                        id="catalog-file"
+                        name="catalog-file"
+                        accept=".pdf"
                       />
                       <button type="submit">上傳 Upload</button>
                     </form>
-                  </td>
-                </tr>
-                <tr id="media-live-event-section">
-                  <td
-                    colspan="1"
-                    style="
-                      border-top: none;
-                      width: 30vw;
-                      border-left: 1px dashed black;
-                      vertical-align: top;
-                      padding-left: 1em;
-                    "
-                  >
-                    <span class="label"
-                      >現場活動徵集<br />Program Open Call</span
-                    >
-                    <div style="margin-top: 0.5em; font-size: 1rem">
-                      想與大家更近距離互動？我們開放以下形式的現場活動徵集：短講、表演、工作坊、DJ等。<br />
-                      Want to engage with visitors more directly? Propose
-                      on-site programs such as short talks, performances,
-                      workshops, or DJ sets!
-                    </div>
-                    <div style="margin-top: 0.5em; font-size: 0.5rem">
-                      <a
-                        href="https://forms.gle/ckXiewW68i1VwKYt6"
-                        target="_blank"
-                      >
-                        報名表單 Sign Up Form
-                      </a>
-                    </div>
-                  </td>
-                </tr>
-                <tr id="media-section-catalog-section">
-                  <td
-                    colspan="1"
-                    style="
-                      border-top: none;
-                      border-right: none;
-                      padding-top: 1.5em;
-                    "
-                  >
-                    <span class="label"
-                      >草率簿露出上傳<br />TPABF Catalog Submission</span
-                    >
-                    <div style="margin-top: 0.5em; font-size: 1rem">
-                      單位獲取參展資格即代表可於當年《草率簿 TPABF
-                      Catalog》中露出一面，請使用行銷素材包提供的版型製作，並於期限內完成上傳與左側攤商基本資料修改，逾期視同放棄。<br /><br />
-                      📌 規格：<br />
-                      檔案類型 Format ：PDF（請確認圖片已置入、文字已轉外框）<br />
-                      工作區域 Workspace：140×220mm<br />
-                      四邊出血 Bleed：5mm<br />
-                      色彩 Color Mode: 黑白 B&W<br />
+                  </div>
+                </td>
+              </tr>
 
-                      <br /><br />
-                      Once selected to exhibit, your project will be featured on
-                      one page in that year’s TPABF Catalog. Please use the
-                      template from the Marketing Kit and complete both the
-                      upload and any updates to your basic exhibitor info
-                      (left-side fields) by the deadline. Late submissions will
-                      not be included.<br /><br />
-                      📌 Specs:<br />
-                      File Format: PDF (Please ensure images are embedded and
-                      text is outlined)<br />
-                      Workspace: 140 × 220 mm<br />
-                      Bleed: 5 mm on all sides<br />
-                      Color Mode: Black & White (B&W)<br /><br />
-                      📥 公版下載 Template Download:<br />
-                      <a
-                        href="https://drive.google.com/file/d/1zm8dL5ElUdGKYjGFjN5y4R3Ml5baaEKw/view?usp=drive_link"
-                        target="_blank"
-                      >
-                        Download Link
-                      </a>
-                    </div>
-                  </td>
-                  <td
-                    colspan="1"
-                    style="
-                      border-top: none;
-                      width: 20%;
-                      border-left: 1px dashed black;
-                    "
-                  >
-                    <div>
-                      <form
-                        id="catalog-upload-form"
-                        enctype="multipart/form-data"
-                      >
-                        <input
-                          type="file"
-                          id="catalog-file"
-                          name="catalog-file"
-                          accept=".pdf"
-                        />
-                        <button type="submit">上傳 Upload</button>
-                      </form>
-                    </div>
-                  </td>
-                </tr>
-              </section>
               <!-- 簽證資料上傳 Visa Upload -->
               <tr style="display: none" id="media-section-row3">
                 <td
