feat: implement file upload functionality for visa, marketing, catalog, and declaration documents

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -1040,6 +1040,7 @@
                                   style="margin-bottom: 0.5em"
                                 />
                                 <button
+                                  id="uploadBtnDeclaration"
                                   type="submit"
                                   style="
                                     padding: 0.3em 1.2em;
@@ -1236,7 +1237,9 @@
                         name="visa-file"
                         accept=".pdf"
                       />
-                      <button type="submit">上傳 Upload</button>
+                      <button type="submit" id="uploadBtnVisa">
+                        上傳 Upload
+                      </button>
                     </form>
                   </div>
                 </td>
@@ -1359,7 +1362,9 @@
                       name="marketing-file"
                       accept=".pdf,.jpg,.jpeg,.png"
                     />
-                    <button type="submit">上傳 Upload</button>
+                    <button type="submit" id="uploadBtnMarketing">
+                      上傳 Upload
+                    </button>
                   </form>
                 </td>
               </tr>
@@ -1453,7 +1458,9 @@
                         name="catalog-file"
                         accept=".pdf"
                       />
-                      <button type="submit">上傳 Upload</button>
+                      <button type="submit" id="uploadBtnCatalog">
+                        上傳 Upload
+                      </button>
                     </form>
                   </div>
                 </td>
