fix: update electricity requirement notice for clarity and improved user guidance

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -362,7 +362,7 @@
                   <span class="label">電力需求 Electricity Requirement</span
                   ><br />
                   <span id="electricity-regulation">
-                    請務必詳列設備名稱與瓦數，<br />範例如下：<br />
+                    請務必詳列設備名稱與瓦數，於右上角「編輯」做修改<br />範例如下：<br />
                     微波爐：1100W<br />
                     電扇：65W<br />
                     熱水壺：1500W<br /><br />
