fix: update electricity requirement row styling and improve editing instructions

--- a/dashboard-TPABF.html
+++ b/dashboard-TPABF.html
@@ -356,13 +356,16 @@
               </tr>
               <tr
                 id="electricity-row"
-                style="background-color: #fff5ee; display: none"
+                style="background-color: #8e7f77; display: none"
               >
                 <td>
                   <span class="label">電力需求 Electricity Requirement</span
                   ><br />
                   <span id="electricity-regulation">
-                    請務必詳列設備名稱與瓦數，於右上角「編輯」做修改<br />範例如下：<br />
+                    請務必詳列設備名稱與瓦數，於右上角<span
+                      style="background-color: black; color: ghostwhite"
+                      >「編輯 Edit」</span
+                    >做修改<br />範例如下：<br />
                     微波爐：1100W<br />
                     電扇：65W<br />
                     熱水壺：1500W<br /><br />
@@ -1370,11 +1373,9 @@
               </tr>
               <tr id="media-live-event-section" style="display: none">
                 <td
-                  colspan="3"
                   style="
                     border-top: none;
-                    width: 30vw;
-
+                    width: 55vw;
                     vertical-align: top;
                     padding-left: 1em;
                   "
